Hide the response element and add info in README file

--- a/index.html
+++ b/index.html
@@ -30,46 +30,46 @@
               <p class="article__question">
                 How many team members can I invite? <span class="arrow"></span>
               </p>
-              <!-- <p class="article__response">
+              <p class="article__response">
                 You can invite up to 2 additional users on the Free plan. There is
                 no limit on team members for the Premium plan.
-              </p> -->
+              </p>
             </article>
             <article>
               <p class="article__question">
                 What is the maximum file upload size? <span class="arrow"></span>
               </p>
-              <!-- <p class="article__response">
+              <p class="article__response">
                 No more than 2GB. All files in your account must fit your allotted
                 storage space.
-              </p> -->
+              </p>
             </article>            
             <article>
               <p class="article__question">
                 How do I reset my password? <span class="arrow"></span>
               </p>
-              <!-- <p class="article__response">
+              <p class="article__response">
                 Click “Forgot password” from the login page or “Change password”
                 from your profile page. A reset link will be emailed to you.
-              </p> -->
+              </p>
             </article>                      
             <article>
               <p class="article__question">
                 Can I cancel my subscription? <span class="arrow"></span>
               </p>
-              <!-- <p class="article__response">
+              <p class="article__response">
                 Yes! Send us a message and we’ll process your request no questions
                 asked.
-              </p> -->
+              </p>
             </article>            
             <article>
               <p class="article__question">
                 Do you provide additional support? <span class="arrow"></span>
               </p>
-              <!-- <p class="article__response">
+              <p class="article__response">
                 Chat and email support is available 24/7. Phone lines are open
                 during normal business hours.
-              </p> -->
+              </p>
             </article>
           </div>          
         </section>
