--- a/index.html
+++ b/index.html
@@ -26,47 +26,47 @@
           <img src="./images/illustration-woman-online-mobile.svg" alt="Faq Image">
           <h1>FAQ</h1>
           <div class="articles-ctn">
-            <article>
+            <article class="article">
               <p class="article__question">
                 How many team members can I invite? <span class="arrow"></span>
               </p>
-              <p class="article__response">
+              <p class="article__response response-hidden">
                 You can invite up to 2 additional users on the Free plan. There is
                 no limit on team members for the Premium plan.
               </p>
             </article>
-            <article>
+            <article class="article">
               <p class="article__question">
                 What is the maximum file upload size? <span class="arrow"></span>
               </p>
-              <p class="article__response">
+              <p class="article__response response-hidden">
                 No more than 2GB. All files in your account must fit your allotted
                 storage space.
               </p>
             </article>            
-            <article>
+            <article class="article">
               <p class="article__question">
                 How do I reset my password? <span class="arrow"></span>
               </p>
-              <p class="article__response">
+              <p class="article__response response-hidden">
                 Click “Forgot password” from the login page or “Change password”
                 from your profile page. A reset link will be emailed to you.
               </p>
             </article>                      
-            <article>
+            <article class="article">
               <p class="article__question">
                 Can I cancel my subscription? <span class="arrow"></span>
               </p>
-              <p class="article__response">
+              <p class="article__response response-hidden">
                 Yes! Send us a message and we’ll process your request no questions
                 asked.
               </p>
             </article>            
-            <article>
+            <article class="article">
               <p class="article__question">
                 Do you provide additional support? <span class="arrow"></span>
               </p>
-              <p class="article__response">
+              <p class="article__response response-hidden">
                 Chat and email support is available 24/7. Phone lines are open
                 during normal business hours.
               </p>
@@ -81,5 +81,6 @@
         >. Coded by <a href="https://github.com/Mauricio2802">@maurice_cl42</a>.
       </div>
     </main>
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
