Add the desktop size changing the HTML and CSS to reorganize the positions

--- a/index.html
+++ b/index.html
@@ -23,9 +23,13 @@
     <main>
       <section class="component-ctn">
         <div class="component-info">
-          <img src="./images/illustration-woman-online-mobile.svg" alt="Faq Image">
-          <h1>FAQ</h1>
-          <div class="articles-ctn">
+          <div class="img-ctn">
+            <img class="img" src="./images/illustration-woman-online-mobile.svg" alt="Faq Image">
+            <img class="img-cube" alt="Cube Image">
+          </div>
+          <div class="text-info-ctn">
+            <h1>FAQ</h1>
+            <div class="articles-ctn">
             <article class="article">
               <p class="article__question">
                 How many team members can I invite? <span class="arrow"></span>
@@ -72,6 +76,7 @@
               </p>
             </article>
           </div>          
+        </div>
         </section>
       </section>
       <div class="author">
