Add overflow into a dad container

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
       <section class="component-ctn">
         <div class="component-info">
           <div class="img-ctn">
-            <img class="img" src="./images/illustration-woman-online-mobile.svg" alt="Faq Image">
+            <div class="img-ctn-principal">
+              <img class="img" src="./images/illustration-woman-online-mobile.svg" alt="Faq Image">
+            </div>
             <img class="img-cube" alt="Cube Image">
           </div>
           <div class="text-info-ctn">
